# gosper-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: constants.rs
src/: bihomographic.rs  consts.rs  continued_fraction.rs  display.rs  extended.rs  float.rs  generalized.rs  homographic.rs  iter.rs  lib.rs  rational.rs  terms.rs
